--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>MusNex | Gestión Cultural y Producción de Conciertos</title>
-    <meta name="description" content="MusNex: Expertos en gestión cultural y producción de conciertos en Argentina. Creamos experiencias únicas e impulsamos artistas y eventos musicales.">
-    <meta name="keywords" content="Gestión cultural, eventos, conciertos, producción musical, MusNex, cultura, artistas, Argentina">
+    <meta name="description" content="MusNex: Gestión cultural y producción de conciertos en Argentina. Creamos experiencias únicas e impulsamos artistas. Entra y conoce nuestros eventos.">
+    <meta name="keywords" content="Gestión cultural, eventos, conciertos, producción musical, MusNex, cultura, artistas, Argentina, Buenos Aires">
     <meta name="author" content="MusNex">
     <meta name="robots" content="index, follow">
 
     <link rel="canonical" href="https://www.musnex.com.ar/">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="MusNex | Gestión Cultural y Conciertos">
-    <meta property="og:description" content="Impulsamos la cultura a través de la producción de conciertos y eventos de alto nivel.">
+    <meta property="og:title" content="MusNex | Gestión Cultural">
+    <meta property="og:description" content="Gestión cultural y producción de conciertos. Entra para ver nuestros próximos eventos.">
     <meta property="og:image" content="https://static.wixstatic.com/media/11062b_6bba1e4c5757444285292bb7a26c0a75f000.jpg">
     <meta property="og:url" content="https://www.musnex.com.ar/">
 
@@ -29,16 +29,14 @@
       "name": "MusNex",
       "url": "https://www.musnex.com.ar",
       "logo": "https://static.wixstatic.com/media/d1c839_1ce88ba9fea64d2883d389989b8f48e6~mv2.png",
-      "description": "Gestión cultural y producción de conciertos.",
       "sameAs": [
-        "https://www.instagram.com/tu_usuario_real", 
-        "https://www.facebook.com/tu_pagina_real"
+        "https://malusold0.wixsite.com/musnex"
       ]
     }
     </script>
 
     <style>
-        /* --- ESTILOS (Mantenemos los mismos, funcionan bien) --- */
+        /* --- ESTILOS --- */
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body, html { height: 100%; width: 100%; overflow-x: hidden; }
 
@@ -111,7 +109,7 @@
         .btn-web:hover {
             background-color: transparent; color: #ffffff; border: 1px solid #ffffff;
         }
-        
+
         footer {
             font-size: 12px; color: #F0EFF4; padding: 20px; text-align: center; font-family: 'Montserrat', sans-serif;
         }
@@ -129,11 +127,11 @@
 <body>
 
     <header>
-        <a href="/" class="logo-container" title="Ir al inicio de MusNex">
+        <a href="https://www.musnex.com.ar/" class="logo-container" title="Inicio MusNex">
             <span class="logo-text">M</span>
             <img 
                 src="https://static.wixstatic.com/media/d1c839_1ce88ba9fea64d2883d389989b8f48e6~mv2.png/v1/fill/w_126,h_126,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/d1c839_1ce88ba9fea64d2883d389989b8f48e6~mv2.png" 
-                alt="Logotipo de MusNex - Gestión Cultural" 
+                alt="Logo" 
                 class="logo-img"
                 width="63" height="63"
             >
@@ -142,10 +140,10 @@
 
         <nav>
             <ul>
-                <li><a href="/conciertos.html" title="Ver próximos conciertos">Conciertos</a></li>
-                <li><a href="/cursos-eventos.html" title="Cursos y Eventos culturales">Cursos/Eventos</a></li>
-                <li><a href="/aliados.html" title="Nuestros aliados">Aliados</a></li>
-                <li><a href="/musica.html" title="Música y Artistas">Música</a></li>
+                <li><a href="https://malusold0.wixsite.com/musnex/conciertos" target="_blank" rel="noopener">Conciertos</a></li>
+                <li><a href="https://malusold0.wixsite.com/musnex/cursos-eventos" target="_blank" rel="noopener">Cursos/Eventos</a></li>
+                <li><a href="https://malusold0.wixsite.com/musnex/aliados-culturales" target="_blank" rel="noopener">Aliados</a></li>
+                <li><a href="https://malusold0.wixsite.com/musnex/música" target="_blank" rel="noopener">Música</a></li>
             </ul>
         </nav>
     </header>
@@ -158,11 +156,11 @@
             Creamos y desarrollamos eventos culturales impulsando artistas
         </h2>
 
-        <a href="/" class="btn-web" title="Contacto">CONTACTO</a>
+        <a href="https://malusold0.wixsite.com/musnex" class="btn-web" target="_blank" rel="noopener">WEB</a>
     </main>
 
     <footer>
-        <p>&copy; 2024 MusNex. Todos los derechos reservados.</p>
+        <p>&copy; 2025 MusNex. <a href="https://malusold0.wixsite.com/musnex" style="color:#fff;text-decoration:none;">Sitio Oficial</a></p>
     </footer>
 
 </body>
